<resources>
    <string name="sPButton">Site/Permit</string>
    <string name="oAButton">Owner/Agent</string>
    <string name="dCButton">Designer/Contractor</string>
    <string name="uPDDetails">Update Project Details</string>
    <string name="sPInformation">Enter the building location and permit number/date (if available). This information will appear on your compliance report.</string>
    <string name="sPCS">Construction Site</string>
    <string name="address">Address:</string>
    <string name="zipCode">Zip Code:</string>
    <string name="permit">Permit</string>
    <string name="permitNumber">Permit #:</string>
    <string name="permitDate">Permit Date:</string>
    <string name="update">Update</string>
    <string name="oAInformation">Enter the name and contact information of the Owner/Agent for this building. This information will appear on the compliance report.</string>
    <string name="name">Name</string>
    <string name="fName">First Name:</string>
    <string name="contact">Contact Information</string>
    <string name="lName">Last Name:</string>
    <string name="company">Company:</string>
    <string name="phoneNumber">Phone #:</string>
    <string name="email">E-mail:</string>
    <string name="dCInformation">Enter the name and contact information of the Designer/Contractor for this building. This information will appear on the compliance report.</string>
    <string name="app_name">REScheck Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="titleScreenInstructionsOne">\n  Welcome to REScheck\n               Mobile!\nPlease select to create a\n"New Project" or load an\nexisting one by selecting\n         "Load Project".</string>
	<string name="titleScreenInstructionsTwo">REScheck Mobile simplifies\n   residential energy code\ncompliance by automating\nthe trade-off calculations\n for the International Energy\nConservation Code (IECC)\n     and a number of state-\n          specific codes.</string>
	<string name="newProjectButton">New Project</string>
	<string name="loadProjectButton">Load Project</string>
	<string name="saveProject">Save Project</string>
	<string name="tempTitle">Project Title</string>
	<string name="codeLocation">Code/Location</string>
	<string name="code">Code</string>
	<string name="state">State</string>
	<string name="city">City</string>
	<string name="county">County</string>
	<string name="projectType">Project Type</string>
	<string name="newConstruction">New Construction</string>
	<string name="addition">Addition</string>
	<string name="alteration">Alteration</string>
	<string name="complianceMethod">Compliance Method</string>
	<string name="uATradeOff">UA Trade-OFF</string>
	<string name="performanceAlternative">performanceAlternative</string>
	<string name="buildingCharacteristics">Building Characteristics</string>
	<string name="oneAndTwoFamily">1 and 2 Family</string>
	<string name="multiFamily">Multifamily</string>
	<string name="conditionedFloorArea">Conditioned Floor Area</string>
	<string name="ft2">ft2</string>
	<string name="projectDetails">Project Details</string>
	<string name="checkCompliance">Check Compliance</string>
	<string name="note">notes</string>
	<string name="dOIEnvelope">Depth\nOf\nInsulation</string>
	<string name="wH">Wall\nHeight</string>
	<string name="dBGEnvelope">Depth\nBelow\nGrade</string>
	<string name="dBIGEnvelope">Depth\nBelow\nInside Grade</string>
	<string name="edit">Edit</string>
	<string name="duplicate">Duplicate</string>
	<string name="moveUp">Move Up</string>
	<string name="moveDown">Move Down</string>
	<string name="delete">Delete</string>
	<string name="row">Row:</string>
	<string name="add">Add:</string>
	<string name="ceiling">Ceiling</string>
	<string name="skylight">Skylight</string>
	<string name="wall">Wall</string>
	<string name="window">Window</string>
	<string name="door">Door</string>
	<string name="basement">Basement</string>
	<string name="floor">Floor</string>
	<string name="crawl">Crawl</string>
	<string name="component">Component</string>
	<string name="assembly">Assembly</string>
	<string name="grossArea">Gross Area</string>
	<string name="cavityIRValue">Cavity\nInsulation\nR-Value</string>
	<string name="continuousIRValue">Continuous\nInsulation\nR-Value</string>
	<string name="uFactor">U-Factor</string>
	<string name="envelopeHelpText">^Use the Component Buttons above to create a description of your building.</string>
	<string name="orientationFrontFaces">Orientation - Front Faces:</string>
	<string name="unspecified">Unspecified</string>
	<string name="zeroFeetSquared">0ft2</string>
	<string name="zero">0</string>
	<string name="sHGC">SHGC</string>
	<string name="mechanicalInformation"> Compliance with the 2009 IECC can be demonstrated using the Total UA (Trade-Off) Alternative or the Performance Alternative. The UA Alternative is currently selected. The compliance method can be changed under the Project tab.
The UA Alternative does not consider mechanical systems so mechanical inputs are not available. Under the Performance Alternative, mechanical systems can be specified and may impact the results, however no trade-off credits for high efficiency mechanical equipment are allowed.
See the help for more information.</string>
	<string name="mechanicalTitle">IECC 2009 - UA Trade-Off Mechanical Requirements</string>
	<string name="load">Load</string>
	<string name="loadTitle">Load Project</string>
	<string name="fCOST">Flat Ceiling or Scissor Truss</string>
	<string name="cCNA">Cathedral Ceiling(no attic) </string>
	<string name="rOET">Raised or Energy Truss</string>
	<string name="sTruss">Steel Truss</string>
	<string name="sJR16">Steel Joist/Rafter, 16in. o.c.-Member Size: </string>
	<string name="sJR24">Steel Joist/Rafter, 24in. o.c.-Member Size: </string>
	<string name="sIP">Structural Insulated Panels(SIPs) </string>
	<string name="other">Other</string>
	<string name="createCeiling">Create Ceiling</string>
	<string name="cancel">Cancel</string>
    <string-array name="ceilingSpinner">
        <item>2x4</item>
        <item>2x6</item>
        <item>2x8</item>
    	<item>2x10</item>
    	<item>2x12</item>
    </string-array>
	<string name="createCrawl">Create Crawl</string>
	<string name="sCOM">Solid Concrete or Masonry</string>
	<string name="mBWEC">Masonry Block w/ Empty Cells</string>
	<string name="mBWII">Masonry Block w/ Integral Insulation</string>
	<string name="wF">Wood Frame</string>
	<string name="iCF">Insulated Concrete Forms</string>
	<string name="informationCrawl">The crawl space wall option applies only to walls of unventilated crawl spaces. Enter the specified dimensions in feet (not inches)</string>
	<string name="wallHeight">Wall Height(ft):</string>
	<string name="dBG">Depth Below Grade(ft):</string>
	<string name="dOI">Depth of Insulation(ft):</string>
	<string name="dBIG">Depth Below Inside Grade(ft):</string>
	<string name="createFloor">Create Floor</string>
	<string name="AWoodTruss">All-Wood Joist/Truss:</string>
	<string name="SteelFrame16">Steel Frame, 16" o.c:</string>
	<string name="SteelFrame32">Steel Frame, 32" o.c:</string>
	<string name="SIPanels">Structural Insulated Panels:</string>
	<string name="SOGHeated">Slab-On-Panels (Heated) - Insulation Depth (ft):</string>
	<string name="SOGUnHeated">Slab-On-Panels (UnHeated) - Insulation Depth (ft):</string>
	<string name="Other">Other</string>
	<string name="Cancel">Cancel</string>
	<string-array name="AWoodTrussArray">
     	<item>Over Uncondtioned Space</item>
     	<item>Over Outside Air</item>
    </string-array>
    <string-array name="Steel16Spinner">
        <item>2x6, Over Uncondition Space</item>
        <item>2x8, Over Uncondition Space</item>
        <item>2x10, Over Uncondition Space</item>
        <item>2x12, Over Uncondition Space</item>
        <item>2x6, Over Outside Air</item>
        <item>2x8, Over Outside Air</item>
        <item>2x10, Over Outside Air</item>
        <item>2x12, Over Outside Air</item>
    </string-array>
    <string-array name="Steel32Spinner">
        <item>2x6, Over Uncondition Space</item>
        <item>2x8, Over Uncondition Space</item>
        <item>2x10, Over Uncondition Space</item>
        <item>2x12, Over Uncondition Space</item>
        <item>2x6, Over Outside Air</item>
        <item>2x8, Over Outside Air</item>
        <item>2x10, Over Outside Air</item>
        <item>2x12, Over Outside Air</item>
    </string-array>
    <string-array name="SIPPanelSpinner">
        <item>Over Uncondition Space</item>
        <item>Over Outside Air</item>
    </string-array>
    <string-array name="otherSpinner">
        <item>Over Uncondition Space</item>
        <item>Over Outside Air</item>
    </string-array>
	<string name="sDO">Solid Door (under %50 glazing)</string>
	<string name="gDO">Glass Door (over %50 glazing)</string>
	<string name="createDoor">Create Door</string>
	<string name="mFSkyLight">Metal Frame</string>
	<string name="mFWTBSkyLight">Metal Frame w/ Thermal Break</string>
	<string name="wFSkyLight">Wood Frame</string>
	<string name="vFSkyLight">Vinyl Frame</string>
	<string name="cSSkyLight">Create Skylight</string>
    <string-array name="metalFrameSpinner">
        <item>Single Pane</item>
        <item>Double Pane</item>
        <item>Doubke Pane w/ Low-E</item>
    	<item>Triple Pane</item>
    	<item>Triple Pane w/ Low-E</item>
    </string-array>
<string name="wNewWindow">New Window</string>
<string name="wFType">Frame Construction</string>
<string name="wGType">Type of Glass</string>
<string name="wMFrame">Metal</string>
<string name="wMFrameWTB">Metal with Thermal Break</string>
<string name="wWFrame">Wood</string>
<string name="wVFrame">Vinyl</string>
<string name="wOther">Other</string>
<string name="wSPane">Single Pane</string>
<string name="wDPane">Double Pane</string>
<string name="wDPaneWLE">Double Pane with Low-E</string>
<string name="wTPane">Triple Pane</string>
<string name="wTPaneWLE">Triple Pane with Low-E</string>
<string name="wCreate">Create Window</string>
<string name="wCancel">Cancel</string>
<string name="createWall">Create Wall</string>
<string name="wF16Wall">Wood Frame, 16"o.c.</string>
<string name="wF24Wall">Wood Frame, 24"o.c.</string>
<string name="sF16Wall">Steel Frame, 16"o.c.</string>
<string name="sF24Wall">Steel Frame, 24"o.c.</string>
<string name="sCOMWall">Solid Concrete or Masonry:</string>
<string name="mBWECWall">Masonry Block w/ Empty Cells:</string>
<string name="mBWIIWall">Masonry Block w/ Integral Insulation:</string>
<string name="lSWall">Log-Species:</string>
<string name="sIPWall">Structural Insulated Panels</string>
<string name="iCFWall">Insulated Concrete Forms</string>
<string name="lTNLWall">Log Thickness</string>
    <string-array name="lTNLWallSpinner">
        <item>5"</item>
        <item>6"</item>
        <item>7"</item>
        <item>8"</item>
        <item>9"</item>
        <item>10"</item>
        <item>12"</item>
        <item>14"</item>
        <item>16"</item>
    </string-array>
    <string-array name="sCOMWallSpinner">
        <item>Exterior Insulation</item>
        <item>Interior Insulation</item>
        <item>No Insulation</item>
    </string-array>
    <string-array name="mBWIIWallSpinner">
        <item>Additional Exterior Insulation</item>
        <item>Additional Interior Insulation</item>
        <item>No Additional Insulation</item>
    </string-array>
    <string-array name="codeProjectSpinner">
        <item>2009 IECC</item>
    </string-array>
    <string-array name="stateProjectSpinner">
        <item>Virginia</item>
    </string-array>
    <string-array name="cityProjectSpinner">
        <item>Radford</item>
        <item>Christiansburg</item>
        <item>Blacksburg</item>
    </string-array>
    <string-array name="countyProjectSpinner">
        <item>Montgomery</item>
    </string-array>
</resources>