<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00cccc" >
    <!-- Text that store the text Code/Location -->
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="50dp"
	    android:layout_marginLeft="30dp"
	    android:textSize="25sp"
	    android:text="@string/uPDDetails"/>
    <!-- Button Site/Permit. -->
	<Button 
   		android:id="@+id/sPDetailsButton"
	 	android:layout_marginTop="120dp"
	    android:layout_marginLeft="90dp"
	    android:background="#d9e7f5"
	   	android:layout_width="150dp"
	   	android:layout_height="wrap_content"
	    android:textSize="20sp"
	    android:text="@string/sPButton"/>
	<!-- Button Owner/Agent. -->
	<Button 
   		android:id="@+id/oADetailsButton"
	 	android:layout_marginTop="190dp"
	    android:layout_marginLeft="90dp"
	    android:background="#d9e7f5"
	   	android:layout_width="150dp"
	   	android:layout_height="wrap_content"
	    android:textSize="20sp"
	    android:text="@string/oAButton"/>
	<!-- Designer/Contractor. -->
	<Button 
   		android:id="@+id/dCDetailsButton"
	 	android:layout_marginTop="260dp"
	    android:layout_marginLeft="90dp"
	    android:background="#d9e7f5"
	   	android:layout_width="150dp"
	   	android:layout_height="wrap_content"
	    android:textSize="20sp"
	    android:text="@string/dCButton"/>
	<!-- Cancel button. -->
	<Button
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="350dp"
        android:layout_marginLeft="130dp"
        android:text="@string/cancel"
	    android:textSize="12dp"
	    android:id="@+id/cancelProjectDetailsButton"/>
</RelativeLayout>